// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`ContextScreen should handle empty visitor data 1`] = `
<View
  style={
    {
      "backgroundColor": "#FCFCFD",
      "flex": 1,
      "padding": 15,
    }
  }
>
  <View
    style={
      {
        "backgroundColor": "#F3F3F7",
        "marginTop": 15,
        "paddingHorizontal": 15,
        "paddingVertical": 10,
      }
    }
  >
    <Text
      style={
        {
          "color": "#374151",
          "fontFamily": "monospace",
          "fontSize": 12,
          "lineHeight": 18,
        }
      }
    >
      {}
    </Text>
  </View>
</View>
`;

exports[`ContextScreen should render formatted visitor data 1`] = `
<View
  style={
    {
      "backgroundColor": "#FCFCFD",
      "flex": 1,
      "padding": 15,
    }
  }
>
  <View
    style={
      {
        "backgroundColor": "#F3F3F7",
        "marginTop": 15,
        "paddingHorizontal": 15,
        "paddingVertical": 10,
      }
    }
  >
    <Text
      style={
        {
          "color": "#374151",
          "fontFamily": "monospace",
          "fontSize": 12,
          "lineHeight": 18,
        }
      }
    >
      {
  "userId": "test-user-123",
  "anonymousId": "anon-456",
  "context": {
    "device_type": "mobile",
    "os_name": "iOS"
  }
}
    </Text>
  </View>
</View>
`;
